[package]
authors = ["Jorge Aparicio <jorge@japaric.io>", "Kevin Wang <wy721@qq.com>"]
categories = ["no-std"]
description = "serde-json for pink programs"
documentation = "https://docs.rs/serde-json-core"
edition = "2018"
keywords = ["serde", "json"]
license = "MIT OR Apache-2.0"
name = "pink-json"
readme = "README.md"
repository = "https://github.com/Phala-Network/pink-json"
version = "0.4.0"

[dependencies]
ryu = "1.0.5"

[dependencies.serde]
default-features = false
features = ["alloc"]
version = "1.0.80"

[dev-dependencies]
serde_derive = "1.0.80"

[features]
default = ["custom-error-messages"]
custom-error-messages = []
std = ["serde/std"]
de-number-as-str = []
